--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,10 @@
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
-title: "" # the name of your site, e.g. ACME Corp.
+title: "Susan's Portfolio" # the name of your site, e.g. ACME Corp.
 
+twitter: "http://www.twitter.com/susanjsp_"
+github:  "http://github.com/susanjsp"
+codepen: "https://codepen.io/susanjsp"
+linkedin: "https://www.linkedin.com/in/susanpan96/"
+blog: "https://susanjsp.com"
+email: "susanjsp@protonmail.com"
