add twt card img

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 title: "Susan's Portfolio" # the name of your site, e.g. ACME Corp.
 permalink: /projects/:title
 
+title_image: "https://res.cloudinary.com/susanjsp/image/upload/v1611759540/portfolio/twitter-card_avfmfu.png"
+
 defaults:
   -
     scope:
